@@ -215,6 +215,10 @@ Print a version message, and contact information, then exit. Overrides
 all other options except \fB\-\-help\fP, and nothing is compiled.
 
 .TP
+\fB\-Werror
+Equivalent to +Z2, provided for javac compatibility.
+
+.TP
 \fB\-Xstdout
 Write error messages to standard output, not stderr. At the moment,
 this is incompatible with javac, which takes an argument as the name
